# ManifoldHGNNpaper

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.devcontainer/: Dockerfile  devcontainer.json
OrientedHypergraphs/: layers.py  objects.py  operators.py  train.py  utils.py
OrientedHypergraphs.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
OrientedHypergraphs/toy_examples/: S2flow.py  example_HGs.py
gifs/: laplacian_timeseries
toy_examples/: Make_flow_gifs.py  S2flow.py
toy_examples/flow_sphere/: S2flow.py  example_HGs.py  make_flow_gifs.py
toy_examples/hg_nn/: hg_classification.py
toy_examples/image_denoising/: denoising.py  generation_phase_image.py
